# polymarket-trading-bot

./: .env.example  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  agent.py  airdrop_score.py  config.py  main.py  polymarket_client.py  pyproject.toml  risk_manager.py
backend/app/: airdrop.py  auth.py  bot_engine.py  config.py  data_client.py  executor.py  gamma_client.py  main.py  market_scanner.py  market_schema.py  risk.py  risk_manager.py  ws_client.py
backend/app/strategies/: __init__.py  anti_sybil.py  arbitrage.py  diversity.py  market_maker.py  momentum.py
backend/strategies/: arbitrage.py  diversity_farmer.py  market_maker.py  momentum.py  scheduler.py
backend/tests/: test_api.py  test_auth.py  test_prelive_blockers.py  test_risk.py
docs/: OBSERVABILITY.md  PILOT_DRY_RUN.md
frontend/: .env.local  netlify.toml  next.config.js  package-lock.json  package.json  vercel.json
frontend/.next/: BUILD_ID  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/webpack/edge-server-production/: index.pack
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js
frontend/.next/server/app/: _not-found.rsc
frontend/.next/server/pages/: 500.html
frontend/.next/standalone/: server.js
frontend/.next/standalone/.next/: app-build-manifest.json  build-manifest.json  required-server-files.json
frontend/.next/static/chunks/: main-app-a521c28a11c4d109.js
frontend/.next/static/chunks/app/: layout-7dca8bd4e583eb74.js  (+1 more)
frontend/.next/static/css/: 3bcf000606cd3844.css
frontend/.next/types/app/: layout.ts  page.ts
frontend/.vercel/: project.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: LogFeed.tsx  MarketList.tsx  StatCard.tsx  TradeTable.tsx
frontend/app/lib/: api.ts  mock.ts
polymarket-trading-bot/: README.md
polymarket-trading-bot/.github/workflows/: ci.yml
polymarket-trading-bot/backend/: pyproject.toml
polymarket-trading-bot/backend/app/: __init__.py  airdrop.py  database.py  executor.py  risk.py
polymarket-trading-bot/backend/app/strategies/: market_maker.py  momentum.py
polymarket-trading-bot/frontend/: package.json  tailwind.config.js  tailwind.config.ts
polymarket-trading-bot/frontend/app/: globals.css
polymarket-trading-bot/frontend/app/components/: AirdropMeter.tsx  MarketList.tsx
(+10 files in other folders)
