[project]
name = "polymarket-trading-bot"
version = "0.1.0"
description = "Multi-strategy trading bot for Polymarket prediction markets with airdrop optimization"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client==0.34.6",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "eth-account>=0.11.0",
    "web3>=6.15.0",
    "numpy>=1.26.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
