[project]
name = "polymarket-trading-bot"
version = "2.0.0"
description = "Multi-strategy Polymarket trading bot with airdrop optimization"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.2",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "E402", "F401", "E712"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
